# xrpg

./: .gitattributes  CMakeLists.txt  main.cpp  xrpg.pro
cereal/: CMakeLists.txt
data/: CMakeLists.txt
doc/: Doxyfile
sdl2/: CMakeLists.txt
sdl2-image/: CMakeLists.txt
sdl2-mixer/: CMakeLists.txt
xrpg/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  xrpg.pro  xrpgengineworker.cpp  xrpgengineworker.h
xrpg-assets/: CMakeLists.txt  copy-assets.cmake
xrpg-shared/: CMakeLists.txt  xrpg-shared.pro  xrpgshared.cpp  xrpgshared.h
xrpg-shared/data/: KeyEvent.h  leveldata.cpp  leveldata.h  levelsdata.cpp  levelsdata.h
xrpg-shared/include/: color-palette.h
xrpg-shared/include/core/: error.h  ticks.h
xrpg-shared/include/ecs/: entity.h
xrpg-shared/include/ecs/components/: components.h
xrpg-shared/include/ecs/meta/: index-of.h  rename.h  type-list.h  type.h
xrpg-shared/include/engine/: audio.h  context.h  engine-data.h  engine-run-state.h  engine.h  events.h  init.h  renderer.h  run.h  task.h
xrpg-shared/include/graphics/: color-palette.h  draw.h
xrpg-shared/include/map/: map.h
xrpg-shared/src/core/: error.cpp  ticks.cpp
xrpg-shared/src/engine/: audio.cpp  config.h  engine.cpp  events.cpp  init.cpp  renderer.cpp  run.cpp
xrpg-shared/src/graphics/: color-palette.cpp  draw.cpp
xrpg-shared/src/map/: map.cpp
xrpg-shared/system/: engine.cpp  engine.h  engineworker.cpp  engineworker.h  mainwindow.cpp  mainwindow.h
xrpg/src/: CMakeLists.txt  main.cpp
xrpg/src/Context/: CMakeLists.txt  GlobalContext.cpp  GlobalContext.h
xrpg/src/Run/: CMakeLists.txt  Load.cpp  Load.h  LoadGame.cpp  LoadGame.h  LoadLevel.cpp  LoadLevel.h  MainMenu.cpp  MainMenu.h  NewGame.cpp  NewGame.h  Quit.cpp  Quit.h  Run.cpp  Run.h  Settings.cpp  Settings.h
xrpg/src/run/: init.cpp  init.h  run.h
xrpg_edit/: CMakeLists.txt
xrpg_edit/src/: CMakeLists.txt  main.cpp
xrpg_edit/src/Context/: GlobalContext.cpp  GlobalContext.h
xrpg_edit/src/Run/: CMakeLists.txt  Editor.cpp  Editor.h  EditorBody.cpp  EditorBody.h  EditorMenu.cpp  EditorMenu.h  FileNamePrompt.cpp  FileNamePrompt.h  FileNamePrompt.tcc  NewMap.cpp  NewMap.h  OpenMap.cpp  OpenMap.h  Run.cpp  Run.h  SaveMap.cpp  SaveMap.h
xrpg_shared/: CMakeLists.txt
xrpg_shared/include/Audio/: Audio.h  AudioContext.h  AudioStream.h
xrpg_shared/include/Console/: Console.h  ConsoleInput.h
xrpg_shared/include/Data/: Attributes.h  Map.h  Player.h  Property.h  Stats.h
xrpg_shared/include/Graphics/: Border.h  Character.h  Color.h  Coords.h  Input.h  Menu.h  Menu.tcc  Message.h  OutputBuffer.h
xrpg_shared/include/Run/: Dispatch.h
xrpg_shared/include/Storage/: Level.h  Music.h  Save.h  Settings.h  Storage.h
xrpg_shared/include/Util/: AtomicBuffer.h  AtomicStream.h  AtomicStruct.h  AtomicStructProvider.h  Flag.h  FlagSize.h  Numeric.h  Result.h  String.h
xrpg_shared/src/: CMakeLists.txt
xrpg_shared/src/Audio/: Audio.cpp  AudioCallback.cpp  AudioCallback.h  AudioContext.cpp  AudioContext.h  AudioContextPrivate.h  AudioPlayer.cpp  AudioPlayer.h  AudioProcessing.cpp  AudioProcessing.h  AudioStream.cpp  AudioStream.h  AudioThread.cpp  AudioThread.h  CMakeLists.txt  SampleFormat.cpp  SampleFormat.h
xrpg_shared/src/Audio/Data/: DataInfo.h  File.cpp  File.h  Stream.cpp  Stream.h  WavFile.cpp  WavFile.h  WavFileBuffer.cpp  WavFileBuffer.h  WavFileStream.cpp  WavFileStream.h
xrpg_shared/src/Console/: CMakeLists.txt  ansi.cpp  generic.cpp  win32.cpp
xrpg_shared/src/Data/: Attributes.cpp  CMakeLists.txt  Map.cpp  Player.cpp  Property.cpp  Stats.cpp
xrpg_shared/src/Graphics/: Border.cpp  CMakeLists.txt  Character.cpp  Color.cpp  Coords.cpp  Input.cpp  Menu.cpp  Message.cpp  OutputBuffer.cpp
xrpg_shared/src/Run/: CMakeLists.txt  Dispatch.cpp
xrpg_shared/src/Storage/: CMakeLists.txt  Level.cpp  Music.cpp  Save.cpp  Serialize.cpp  Serialize.h  Settings.cpp  Storage.cpp
xrpg_shared/src/Util/: AtomicBuffer.cpp  AtomicStream.cpp  AtomicStruct.cpp  AtomicStructProvider.cpp  CMakeLists.txt  Flag.cpp  Numeric.cpp  Result.cpp  String.cpp
